fix items alignment in the Contact.css file

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -21,7 +21,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
